# Walltaker-Universal

./: .gitignore  CMakeLists.txt  README.md  api.cpp  api.h  build.sh  config.cpp  config.h  main.cpp  network.cpp  network.h  package-win.sh  resources.qrc  tray.cpp  tray.h  utils.cpp  utils.h  wallpaper.cpp  wallpaper.h  walltaker_opinion.h  walltaker_response.h
.github/workflows/: build-linux.yml  build-windows.yml
